fix: update model and test